--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,16 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif; }
+
+#root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh; }
+
+.search input {
+  padding: 10px 5px; }
+
+.search .dscription {
+  font-size: 0.5em; }
