--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,21 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+#root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+} 
+
+.search {
+  input {
+    padding: 10px 5px;
+  }
+
+  .dscription {
+    font-size:  0.5em;
+  }
+}
